--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
   },
   "dependencies": {
     "autoprefixer": "10.4.16",
-    "next": "13.5.2",
+    "next": "^13.5.4-canary.1",
     "postcss": "8.4.30",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "swiper": "^9.2.0",
     "tailwindcss": "3.3.3"
   }
 }
